# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: tyoaikakirjanpito.md  vaatimusmaarittely.md
harjoitustyo/: .coveragerc  .pylintrc  pyproject.toml  tasks.py
harjoitustyo/dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
harjoitustyo/src/: Candidate.py  Votes.py  index.py  ui.py  votes.py  votesTable.py
harjoitustyo/src/services/: database.py  file_reader.py  file_writer.py  votes.py
harjoitustyo/src/tests/: test_database.py  test_file_reader.py  test_file_writer.py  test_votes.py
harjoitustyo/src/ui/: ResultsView.py  StartView.py  UI.py  VotesTable.py  results_view.py  saved_tables_view.py  scrollable_frame.py  scrollableframe.py  start_view.py  ui.py  votes_frame.py
laskarit/: gitlog.txt
laskarit/viikko1/: eka.txt  gitlog.txt  kolmas.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
