[tool.poetry]
name = "harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pyrankvote = "^2.0.2"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
invoke = "^1.5.0"
pylint = "^2.7.4"
autopep8 = "^1.5.6"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
